y.output
Terminals unused in grammar

    CONST
    AND
    OR
    NOT
    '.'
    FLOAT
    CHR


Grammar

    0 $accept: progr $end

    1 progr: decl_gl clasa fnc bloc

    2 fnc: functie
    3    | fnc functie

    4 lista_param: TIP ID
    5            | lista_param ',' TIP ID

    6 functie: TIP ID '(' lista_param ')' '{' list '}'
    7        | TIP ID '(' ')' '{' list '}'

    8 clasa: CLASS ID '{' VIS ':' decl_cl fnc '}'
    9      | CLASS ID '{' VIS ':' decl_cl '}'

   10 decl_cl: declaratiecl ';'
   11        | decl_cl declaratiecl ';'

   12 declaratiecl: TIP ID
   13             | TIP ID '(' lista_param ')'
   14             | TIP ID '(' ')'

   15 bloc: BGIN list END

   16 list: statement ';'
   17     | list statement ';'

   18 statement: ID ASSIGN operatii
   19          | ID ARR_ACCESS ASSIGN operatii
   20          | ID ASSIGN ID
   21          | TIP ID ARR_ACCESS
   22          | TIP ID
   23          | ID ASSIGN STRING
   24          | ID OP_STR ID
   25          | ID '(' ')'
   26          | ID '(' lista_apel ')'
   27          | IF '(' bool ')' '{' list '}'
   28          | WHILE '(' bool ')' '{' list '}'
   29          | FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list '}'

   30 operatii: operatii '+' operatii
   31         | operatii '-' operatii
   32         | operatii '*' operatii
   33         | operatii '/' operatii
   34         | NR
   35         | ID ARR_ACCESS

   36 decl_gl: declaratie ';'
   37        | decl_gl declaratie ';'

   38 declaratie: TIP ID
   39           | TIP ID '(' lista_param ')'
   40           | TIP ID '(' ')'

   41 lista_apel: NR
   42           | ID
   43           | ID ARR_ACCESS
   44           | lista_apel ',' NR
   45           | lista_apel ',' ID
   46           | lista_apel ',' ID '(' lista_apel ')'
   47           | lista_apel ',' ID '(' ')'
   48           | lista_apel ',' STRING
   49           | lista_apel ','

   50 bool: BOOL
   51     | operatii_binare

   52 operatii_binare: ID OP_BIN ID


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 6 7 13 14 25 26 27 28 29 39 40 46 47
    ')' (41) 6 7 13 14 25 26 27 28 29 39 40 46 47
    '*' (42) 32
    '+' (43) 30
    ',' (44) 5 44 45 46 47 48 49
    '-' (45) 31
    '.' <strval> (46)
    '/' (47) 33
    ':' (58) 8 9
    ';' (59) 10 11 16 17 29 36 37
    '{' (123) 6 7 8 9 27 28 29
    '}' (125) 6 7 8 9 27 28 29
    error (256)
    ID <strval> (258) 4 5 6 7 8 9 12 13 14 18 19 20 21 22 23 24 25 26 29 35 38 39 40 42 43 45 46 47 52
    TIP <strval> (259) 4 5 6 7 12 13 14 21 22 38 39 40
    BGIN <strval> (260) 15
    END <strval> (261) 15
    CONST <strval> (262)
    ASSIGN <strval> (263) 18 19 20 23 29
    VIS <strval> (264) 8 9
    CLASS <strval> (265) 8 9
    IF <strval> (266) 27
    WHILE <strval> (267) 28
    FOR <strval> (268) 29
    OP_BIN <strval> (269) 52
    OP_STR <strval> (270) 24
    BOOL <strval> (271) 50
    STRING <strval> (272) 23 48
    AND <strval> (273)
    OR <strval> (274)
    NOT <strval> (275)
    FLOAT <strval> (276)
    NR <number> (277) 34 41 44
    ARR_ACCESS <intval> (278) 19 21 35 43
    CHR <strval> (279)


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    progr (38)
        on left: 1
        on right: 0
    fnc (39)
        on left: 2 3
        on right: 1 3 8
    lista_param (40)
        on left: 4 5
        on right: 5 6 13 39
    functie (41)
        on left: 6 7
        on right: 2 3
    clasa (42)
        on left: 8 9
        on right: 1
    decl_cl (43)
        on left: 10 11
        on right: 8 9 11
    declaratiecl (44)
        on left: 12 13 14
        on right: 10 11
    bloc (45)
        on left: 15
        on right: 1
    list (46)
        on left: 16 17
        on right: 6 7 15 17 27 28 29
    statement (47)
        on left: 18 19 20 21 22 23 24 25 26 27 28 29
        on right: 16 17
    operatii <number> (48)
        on left: 30 31 32 33 34 35
        on right: 18 19 29 30 31 32 33
    decl_gl (49)
        on left: 36 37
        on right: 1 37
    declaratie (50)
        on left: 38 39 40
        on right: 36 37
    lista_apel (51)
        on left: 41 42 43 44 45 46 47 48 49
        on right: 26 44 45 46 47 48 49
    bool <blval> (52)
        on left: 50 51
        on right: 27 28
    operatii_binare <blval> (53)
        on left: 52
        on right: 29 51


State 0

    0 $accept: . progr $end

    TIP  shift, and go to state 1

    progr       go to state 2
    decl_gl     go to state 3
    declaratie  go to state 4


State 1

   38 declaratie: TIP . ID
   39           | TIP . ID '(' lista_param ')'
   40           | TIP . ID '(' ')'

    ID  shift, and go to state 5


State 2

    0 $accept: progr . $end

    $end  shift, and go to state 6


State 3

    1 progr: decl_gl . clasa fnc bloc
   37 decl_gl: decl_gl . declaratie ';'

    TIP    shift, and go to state 1
    CLASS  shift, and go to state 7

    clasa       go to state 8
    declaratie  go to state 9


State 4

   36 decl_gl: declaratie . ';'

    ';'  shift, and go to state 10


State 5

   38 declaratie: TIP ID .
   39           | TIP ID . '(' lista_param ')'
   40           | TIP ID . '(' ')'

    '('  shift, and go to state 11

    $default  reduce using rule 38 (declaratie)


State 6

    0 $accept: progr $end .

    $default  accept


State 7

    8 clasa: CLASS . ID '{' VIS ':' decl_cl fnc '}'
    9      | CLASS . ID '{' VIS ':' decl_cl '}'

    ID  shift, and go to state 12


State 8

    1 progr: decl_gl clasa . fnc bloc

    TIP  shift, and go to state 13

    fnc      go to state 14
    functie  go to state 15


State 9

   37 decl_gl: decl_gl declaratie . ';'

    ';'  shift, and go to state 16


State 10

   36 decl_gl: declaratie ';' .

    $default  reduce using rule 36 (decl_gl)


State 11

   39 declaratie: TIP ID '(' . lista_param ')'
   40           | TIP ID '(' . ')'

    TIP  shift, and go to state 17
    ')'  shift, and go to state 18

    lista_param  go to state 19


State 12

    8 clasa: CLASS ID . '{' VIS ':' decl_cl fnc '}'
    9      | CLASS ID . '{' VIS ':' decl_cl '}'

    '{'  shift, and go to state 20


State 13

    6 functie: TIP . ID '(' lista_param ')' '{' list '}'
    7        | TIP . ID '(' ')' '{' list '}'

    ID  shift, and go to state 21


State 14

    1 progr: decl_gl clasa fnc . bloc
    3 fnc: fnc . functie

    TIP   shift, and go to state 13
    BGIN  shift, and go to state 22

    functie  go to state 23
    bloc     go to state 24


State 15

    2 fnc: functie .

    $default  reduce using rule 2 (fnc)


State 16

   37 decl_gl: decl_gl declaratie ';' .

    $default  reduce using rule 37 (decl_gl)


State 17

    4 lista_param: TIP . ID

    ID  shift, and go to state 25


State 18

   40 declaratie: TIP ID '(' ')' .

    $default  reduce using rule 40 (declaratie)


State 19

    5 lista_param: lista_param . ',' TIP ID
   39 declaratie: TIP ID '(' lista_param . ')'

    ','  shift, and go to state 26
    ')'  shift, and go to state 27


State 20

    8 clasa: CLASS ID '{' . VIS ':' decl_cl fnc '}'
    9      | CLASS ID '{' . VIS ':' decl_cl '}'

    VIS  shift, and go to state 28


State 21

    6 functie: TIP ID . '(' lista_param ')' '{' list '}'
    7        | TIP ID . '(' ')' '{' list '}'

    '('  shift, and go to state 29


State 22

   15 bloc: BGIN . list END

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 35
    statement  go to state 36


State 23

    3 fnc: fnc functie .

    $default  reduce using rule 3 (fnc)


State 24

    1 progr: decl_gl clasa fnc bloc .

    $default  reduce using rule 1 (progr)


State 25

    4 lista_param: TIP ID .

    $default  reduce using rule 4 (lista_param)


State 26

    5 lista_param: lista_param ',' . TIP ID

    TIP  shift, and go to state 37


State 27

   39 declaratie: TIP ID '(' lista_param ')' .

    $default  reduce using rule 39 (declaratie)


State 28

    8 clasa: CLASS ID '{' VIS . ':' decl_cl fnc '}'
    9      | CLASS ID '{' VIS . ':' decl_cl '}'

    ':'  shift, and go to state 38


State 29

    6 functie: TIP ID '(' . lista_param ')' '{' list '}'
    7        | TIP ID '(' . ')' '{' list '}'

    TIP  shift, and go to state 17
    ')'  shift, and go to state 39

    lista_param  go to state 40


State 30

   18 statement: ID . ASSIGN operatii
   19          | ID . ARR_ACCESS ASSIGN operatii
   20          | ID . ASSIGN ID
   23          | ID . ASSIGN STRING
   24          | ID . OP_STR ID
   25          | ID . '(' ')'
   26          | ID . '(' lista_apel ')'

    ASSIGN      shift, and go to state 41
    OP_STR      shift, and go to state 42
    ARR_ACCESS  shift, and go to state 43
    '('         shift, and go to state 44


State 31

   21 statement: TIP . ID ARR_ACCESS
   22          | TIP . ID

    ID  shift, and go to state 45


State 32

   27 statement: IF . '(' bool ')' '{' list '}'

    '('  shift, and go to state 46


State 33

   28 statement: WHILE . '(' bool ')' '{' list '}'

    '('  shift, and go to state 47


State 34

   29 statement: FOR . '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list '}'

    '('  shift, and go to state 48


State 35

   15 bloc: BGIN list . END
   17 list: list . statement ';'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    END    shift, and go to state 49
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    statement  go to state 50


State 36

   16 list: statement . ';'

    ';'  shift, and go to state 51


State 37

    5 lista_param: lista_param ',' TIP . ID

    ID  shift, and go to state 52


State 38

    8 clasa: CLASS ID '{' VIS ':' . decl_cl fnc '}'
    9      | CLASS ID '{' VIS ':' . decl_cl '}'

    TIP  shift, and go to state 53

    decl_cl       go to state 54
    declaratiecl  go to state 55


State 39

    7 functie: TIP ID '(' ')' . '{' list '}'

    '{'  shift, and go to state 56


State 40

    5 lista_param: lista_param . ',' TIP ID
    6 functie: TIP ID '(' lista_param . ')' '{' list '}'

    ','  shift, and go to state 26
    ')'  shift, and go to state 57


State 41

   18 statement: ID ASSIGN . operatii
   20          | ID ASSIGN . ID
   23          | ID ASSIGN . STRING

    ID      shift, and go to state 58
    STRING  shift, and go to state 59
    NR      shift, and go to state 60

    operatii  go to state 61


State 42

   24 statement: ID OP_STR . ID

    ID  shift, and go to state 62


State 43

   19 statement: ID ARR_ACCESS . ASSIGN operatii

    ASSIGN  shift, and go to state 63


State 44

   25 statement: ID '(' . ')'
   26          | ID '(' . lista_apel ')'

    ID   shift, and go to state 64
    NR   shift, and go to state 65
    ')'  shift, and go to state 66

    lista_apel  go to state 67


State 45

   21 statement: TIP ID . ARR_ACCESS
   22          | TIP ID .

    ARR_ACCESS  shift, and go to state 68

    $default  reduce using rule 22 (statement)


State 46

   27 statement: IF '(' . bool ')' '{' list '}'

    ID    shift, and go to state 69
    BOOL  shift, and go to state 70

    bool             go to state 71
    operatii_binare  go to state 72


State 47

   28 statement: WHILE '(' . bool ')' '{' list '}'

    ID    shift, and go to state 69
    BOOL  shift, and go to state 70

    bool             go to state 73
    operatii_binare  go to state 72


State 48

   29 statement: FOR '(' . ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list '}'

    ID  shift, and go to state 74


State 49

   15 bloc: BGIN list END .

    $default  reduce using rule 15 (bloc)


State 50

   17 list: list statement . ';'

    ';'  shift, and go to state 75


State 51

   16 list: statement ';' .

    $default  reduce using rule 16 (list)


State 52

    5 lista_param: lista_param ',' TIP ID .

    $default  reduce using rule 5 (lista_param)


State 53

   12 declaratiecl: TIP . ID
   13             | TIP . ID '(' lista_param ')'
   14             | TIP . ID '(' ')'

    ID  shift, and go to state 76


State 54

    8 clasa: CLASS ID '{' VIS ':' decl_cl . fnc '}'
    9      | CLASS ID '{' VIS ':' decl_cl . '}'
   11 decl_cl: decl_cl . declaratiecl ';'

    TIP  shift, and go to state 77
    '}'  shift, and go to state 78

    fnc           go to state 79
    functie       go to state 15
    declaratiecl  go to state 80


State 55

   10 decl_cl: declaratiecl . ';'

    ';'  shift, and go to state 81


State 56

    7 functie: TIP ID '(' ')' '{' . list '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 82
    statement  go to state 36


State 57

    6 functie: TIP ID '(' lista_param ')' . '{' list '}'

    '{'  shift, and go to state 83


State 58

   20 statement: ID ASSIGN ID .
   35 operatii: ID . ARR_ACCESS

    ARR_ACCESS  shift, and go to state 84

    $default  reduce using rule 20 (statement)


State 59

   23 statement: ID ASSIGN STRING .

    $default  reduce using rule 23 (statement)


State 60

   34 operatii: NR .

    $default  reduce using rule 34 (operatii)


State 61

   18 statement: ID ASSIGN operatii .
   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii

    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88

    $default  reduce using rule 18 (statement)


State 62

   24 statement: ID OP_STR ID .

    $default  reduce using rule 24 (statement)


State 63

   19 statement: ID ARR_ACCESS ASSIGN . operatii

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 90


State 64

   42 lista_apel: ID .
   43           | ID . ARR_ACCESS

    ARR_ACCESS  shift, and go to state 91

    $default  reduce using rule 42 (lista_apel)


State 65

   41 lista_apel: NR .

    $default  reduce using rule 41 (lista_apel)


State 66

   25 statement: ID '(' ')' .

    $default  reduce using rule 25 (statement)


State 67

   26 statement: ID '(' lista_apel . ')'
   44 lista_apel: lista_apel . ',' NR
   45           | lista_apel . ',' ID
   46           | lista_apel . ',' ID '(' lista_apel ')'
   47           | lista_apel . ',' ID '(' ')'
   48           | lista_apel . ',' STRING
   49           | lista_apel . ','

    ','  shift, and go to state 92
    ')'  shift, and go to state 93


State 68

   21 statement: TIP ID ARR_ACCESS .

    $default  reduce using rule 21 (statement)


State 69

   52 operatii_binare: ID . OP_BIN ID

    OP_BIN  shift, and go to state 94


State 70

   50 bool: BOOL .

    $default  reduce using rule 50 (bool)


State 71

   27 statement: IF '(' bool . ')' '{' list '}'

    ')'  shift, and go to state 95


State 72

   51 bool: operatii_binare .

    $default  reduce using rule 51 (bool)


State 73

   28 statement: WHILE '(' bool . ')' '{' list '}'

    ')'  shift, and go to state 96


State 74

   29 statement: FOR '(' ID . ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list '}'

    ASSIGN  shift, and go to state 97


State 75

   17 list: list statement ';' .

    $default  reduce using rule 17 (list)


State 76

   12 declaratiecl: TIP ID .
   13             | TIP ID . '(' lista_param ')'
   14             | TIP ID . '(' ')'

    '('  shift, and go to state 98

    $default  reduce using rule 12 (declaratiecl)


State 77

    6 functie: TIP . ID '(' lista_param ')' '{' list '}'
    7        | TIP . ID '(' ')' '{' list '}'
   12 declaratiecl: TIP . ID
   13             | TIP . ID '(' lista_param ')'
   14             | TIP . ID '(' ')'

    ID  shift, and go to state 99


State 78

    9 clasa: CLASS ID '{' VIS ':' decl_cl '}' .

    $default  reduce using rule 9 (clasa)


State 79

    3 fnc: fnc . functie
    8 clasa: CLASS ID '{' VIS ':' decl_cl fnc . '}'

    TIP  shift, and go to state 13
    '}'  shift, and go to state 100

    functie  go to state 23


State 80

   11 decl_cl: decl_cl declaratiecl . ';'

    ';'  shift, and go to state 101


State 81

   10 decl_cl: declaratiecl ';' .

    $default  reduce using rule 10 (decl_cl)


State 82

    7 functie: TIP ID '(' ')' '{' list . '}'
   17 list: list . statement ';'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34
    '}'    shift, and go to state 102

    statement  go to state 50


State 83

    6 functie: TIP ID '(' lista_param ')' '{' . list '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 103
    statement  go to state 36


State 84

   35 operatii: ID ARR_ACCESS .

    $default  reduce using rule 35 (operatii)


State 85

   30 operatii: operatii '+' . operatii

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 104


State 86

   31 operatii: operatii '-' . operatii

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 105


State 87

   32 operatii: operatii '*' . operatii

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 106


State 88

   33 operatii: operatii '/' . operatii

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 107


State 89

   35 operatii: ID . ARR_ACCESS

    ARR_ACCESS  shift, and go to state 84


State 90

   19 statement: ID ARR_ACCESS ASSIGN operatii .
   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii

    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88

    $default  reduce using rule 19 (statement)


State 91

   43 lista_apel: ID ARR_ACCESS .

    $default  reduce using rule 43 (lista_apel)


State 92

   44 lista_apel: lista_apel ',' . NR
   45           | lista_apel ',' . ID
   46           | lista_apel ',' . ID '(' lista_apel ')'
   47           | lista_apel ',' . ID '(' ')'
   48           | lista_apel ',' . STRING
   49           | lista_apel ',' .

    ID      shift, and go to state 108
    STRING  shift, and go to state 109
    NR      shift, and go to state 110

    $default  reduce using rule 49 (lista_apel)


State 93

   26 statement: ID '(' lista_apel ')' .

    $default  reduce using rule 26 (statement)


State 94

   52 operatii_binare: ID OP_BIN . ID

    ID  shift, and go to state 111


State 95

   27 statement: IF '(' bool ')' . '{' list '}'

    '{'  shift, and go to state 112


State 96

   28 statement: WHILE '(' bool ')' . '{' list '}'

    '{'  shift, and go to state 113


State 97

   29 statement: FOR '(' ID ASSIGN . ID ';' operatii_binare ';' operatii ')' '{' list '}'

    ID  shift, and go to state 114


State 98

   13 declaratiecl: TIP ID '(' . lista_param ')'
   14             | TIP ID '(' . ')'

    TIP  shift, and go to state 17
    ')'  shift, and go to state 115

    lista_param  go to state 116


State 99

    6 functie: TIP ID . '(' lista_param ')' '{' list '}'
    7        | TIP ID . '(' ')' '{' list '}'
   12 declaratiecl: TIP ID .
   13             | TIP ID . '(' lista_param ')'
   14             | TIP ID . '(' ')'

    '('  shift, and go to state 117

    $default  reduce using rule 12 (declaratiecl)


State 100

    8 clasa: CLASS ID '{' VIS ':' decl_cl fnc '}' .

    $default  reduce using rule 8 (clasa)


State 101

   11 decl_cl: decl_cl declaratiecl ';' .

    $default  reduce using rule 11 (decl_cl)


State 102

    7 functie: TIP ID '(' ')' '{' list '}' .

    $default  reduce using rule 7 (functie)


State 103

    6 functie: TIP ID '(' lista_param ')' '{' list . '}'
   17 list: list . statement ';'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34
    '}'    shift, and go to state 118

    statement  go to state 50


State 104

   30 operatii: operatii . '+' operatii
   30         | operatii '+' operatii .
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii

    '*'  shift, and go to state 87
    '/'  shift, and go to state 88

    $default  reduce using rule 30 (operatii)


State 105

   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   31         | operatii '-' operatii .
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii

    '*'  shift, and go to state 87
    '/'  shift, and go to state 88

    $default  reduce using rule 31 (operatii)


State 106

   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   32         | operatii '*' operatii .
   33         | operatii . '/' operatii

    $default  reduce using rule 32 (operatii)


State 107

   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii
   33         | operatii '/' operatii .

    $default  reduce using rule 33 (operatii)


State 108

   45 lista_apel: lista_apel ',' ID .
   46           | lista_apel ',' ID . '(' lista_apel ')'
   47           | lista_apel ',' ID . '(' ')'

    '('  shift, and go to state 119

    $default  reduce using rule 45 (lista_apel)


State 109

   48 lista_apel: lista_apel ',' STRING .

    $default  reduce using rule 48 (lista_apel)


State 110

   44 lista_apel: lista_apel ',' NR .

    $default  reduce using rule 44 (lista_apel)


State 111

   52 operatii_binare: ID OP_BIN ID .

    $default  reduce using rule 52 (operatii_binare)


State 112

   27 statement: IF '(' bool ')' '{' . list '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 120
    statement  go to state 36


State 113

   28 statement: WHILE '(' bool ')' '{' . list '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 121
    statement  go to state 36


State 114

   29 statement: FOR '(' ID ASSIGN ID . ';' operatii_binare ';' operatii ')' '{' list '}'

    ';'  shift, and go to state 122


State 115

   14 declaratiecl: TIP ID '(' ')' .

    $default  reduce using rule 14 (declaratiecl)


State 116

    5 lista_param: lista_param . ',' TIP ID
   13 declaratiecl: TIP ID '(' lista_param . ')'

    ','  shift, and go to state 26
    ')'  shift, and go to state 123


State 117

    6 functie: TIP ID '(' . lista_param ')' '{' list '}'
    7        | TIP ID '(' . ')' '{' list '}'
   13 declaratiecl: TIP ID '(' . lista_param ')'
   14             | TIP ID '(' . ')'

    TIP  shift, and go to state 17
    ')'  shift, and go to state 124

    lista_param  go to state 125


State 118

    6 functie: TIP ID '(' lista_param ')' '{' list '}' .

    $default  reduce using rule 6 (functie)


State 119

   46 lista_apel: lista_apel ',' ID '(' . lista_apel ')'
   47           | lista_apel ',' ID '(' . ')'

    ID   shift, and go to state 64
    NR   shift, and go to state 65
    ')'  shift, and go to state 126

    lista_apel  go to state 127


State 120

   17 list: list . statement ';'
   27 statement: IF '(' bool ')' '{' list . '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34
    '}'    shift, and go to state 128

    statement  go to state 50


State 121

   17 list: list . statement ';'
   28 statement: WHILE '(' bool ')' '{' list . '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34
    '}'    shift, and go to state 129

    statement  go to state 50


State 122

   29 statement: FOR '(' ID ASSIGN ID ';' . operatii_binare ';' operatii ')' '{' list '}'

    ID  shift, and go to state 69

    operatii_binare  go to state 130


State 123

   13 declaratiecl: TIP ID '(' lista_param ')' .

    $default  reduce using rule 13 (declaratiecl)


State 124

    7 functie: TIP ID '(' ')' . '{' list '}'
   14 declaratiecl: TIP ID '(' ')' .

    '{'  shift, and go to state 56

    $default  reduce using rule 14 (declaratiecl)


State 125

    5 lista_param: lista_param . ',' TIP ID
    6 functie: TIP ID '(' lista_param . ')' '{' list '}'
   13 declaratiecl: TIP ID '(' lista_param . ')'

    ','  shift, and go to state 26
    ')'  shift, and go to state 131


State 126

   47 lista_apel: lista_apel ',' ID '(' ')' .

    $default  reduce using rule 47 (lista_apel)


State 127

   44 lista_apel: lista_apel . ',' NR
   45           | lista_apel . ',' ID
   46           | lista_apel . ',' ID '(' lista_apel ')'
   46           | lista_apel ',' ID '(' lista_apel . ')'
   47           | lista_apel . ',' ID '(' ')'
   48           | lista_apel . ',' STRING
   49           | lista_apel . ','

    ','  shift, and go to state 92
    ')'  shift, and go to state 132


State 128

   27 statement: IF '(' bool ')' '{' list '}' .

    $default  reduce using rule 27 (statement)


State 129

   28 statement: WHILE '(' bool ')' '{' list '}' .

    $default  reduce using rule 28 (statement)


State 130

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare . ';' operatii ')' '{' list '}'

    ';'  shift, and go to state 133


State 131

    6 functie: TIP ID '(' lista_param ')' . '{' list '}'
   13 declaratiecl: TIP ID '(' lista_param ')' .

    '{'  shift, and go to state 83

    $default  reduce using rule 13 (declaratiecl)


State 132

   46 lista_apel: lista_apel ',' ID '(' lista_apel ')' .

    $default  reduce using rule 46 (lista_apel)


State 133

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' . operatii ')' '{' list '}'

    ID  shift, and go to state 89
    NR  shift, and go to state 60

    operatii  go to state 134


State 134

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii . ')' '{' list '}'
   30 operatii: operatii . '+' operatii
   31         | operatii . '-' operatii
   32         | operatii . '*' operatii
   33         | operatii . '/' operatii

    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    ')'  shift, and go to state 135


State 135

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' . '{' list '}'

    '{'  shift, and go to state 136


State 136

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' . list '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34

    list       go to state 137
    statement  go to state 36


State 137

   17 list: list . statement ';'
   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list . '}'

    ID     shift, and go to state 30
    TIP    shift, and go to state 31
    IF     shift, and go to state 32
    WHILE  shift, and go to state 33
    FOR    shift, and go to state 34
    '}'    shift, and go to state 138

    statement  go to state 50


State 138

   29 statement: FOR '(' ID ASSIGN ID ';' operatii_binare ';' operatii ')' '{' list '}' .

    $default  reduce using rule 29 (statement)
